load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generate_lib",
    srcs = ["generate.go"],
    importpath = "github.com/GoogleContainerTools/distroless/debian_package_manager/cmd/generate",
    visibility = ["//visibility:private"],
    deps = [
        "//tools/debian_package_manager/cmd/flags",
        "//tools/debian_package_manager/internal/build",
    ],
)

go_binary(
    name = "generate",
    embed = [":generate_lib"],
    visibility = ["//visibility:public"],
)
