load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deb",
    srcs = [
        "package.go",
        "packageindex.go",
        "parser.go",
        "snapshot.go",
        "versions.go",
    ],
    importpath = "github.com/GoogleContainerTools/distroless/debian_package_manager/internal/deb",
    visibility = ["//tools/debian_package_manager:__subpackages__"],
    deps = [
        "//tools/debian_package_manager/internal/build/config",
        "//tools/debian_package_manager/internal/rhttp",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "deb_test",
    srcs = [
        "package_test.go",
        "parser_test.go",
        "versions_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":deb"],
    deps = ["@com_github_google_go_cmp//cmp:go_default_library"],
)
